bug: scrollbar

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -539,6 +539,7 @@ header {
     opacity: 1; } }
   .navBar .info {
     height: 100%;
+    overflow: hidden;
     padding: 10px 20px; }
     @media only screen and (min-width: 960px) {
       .navBar .info {
