--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -67,6 +67,7 @@
 
   .info {
     height: 100%;
+    overflow: hidden;
     padding: 10px 20px;
 
     @include breakpoint($desktop) {
